Remove notes on books from thesis and add all pca images to appendix

--- a/latex/appendix.tex
+++ b/latex/appendix.tex
@@ -1,122 +1,154 @@
-
-\chapter{Vergleichende Anatomie}
-\label{appendix_vergleichende_anatomie}
-
-Notizen aus "`Vergleichende und funktionelle Anatomie der Wirbeltiere"' \cite{Vergleichende_Anatomie}:\\
-
-\textbf{Kapitel 1} - Einleitung
-\begin{itemize}
- \item "`Nichts anderes in der Natur hat eine herrlichere Struktur als der Körper der Wirbeltiere."' (S.\ 1)
- \item Anpassung des Körpers an äußere Gegebenheiten (S.\ 3). $\rightarrow$ Eingabeparameter?
- \item (phylogenetische) Homologie von Strukturen: gemeinsame Abstammung (meist auch gleiche Funktion) (S.\ 4 und 6)
- \item Analogie von Strukturen: gleiche Funktion aber nicht gleiche phylogenetische Herkunft (S.\ 6)
- \item serielle Homologie: homologe Gene an verschiedenen Körperteilen aktiviert (\zb Wirbel) (S.\ 7) $\rightarrow$ gleiche/sehr ähnliche Regeln
- \item rudimentäre/degenerierte Organe: haben keine Funktion mehr, waren aber bei Vorfahren funktionell (\zb Beckengürtel des Finnwals) (S.\ 9/10)
- \item Veränderungen von Körperproportionen (\zb Schädelknochen) können durch eine fortschreitende Verzerrung eines Gitters beschrieben werden (S.\ 18/19), siehe auch  Anhang \ref{appendix_darcy_thompson}
-\end{itemize}
-
-\textbf{Kapitel 2} - Charakterisierung , Ursprung und Einteilung der Vertebraten
-\begin{itemize}
- \item "`[\dots] ein Tier mit einem Cranium, also einer skelettartigen Schädelkapsel, [ist] ein Vertebrat."' (S.\ 27)
- \item Teil der allgeime Beschreibung der (meisten) Vertebraten (S.\ 27): 
- \begin{itemize}
-  \item "`Der Körper ist bilateralsymmetrisch, \dash er weist eine rechte und eine linke Seite, ein anteriores und ein posteriores Ende und eine dorsale und eine ventrale Oberfläche auf."'
-  \item Sie haben ein inneres Skelett.
- \end{itemize}
-\end{itemize}
-
-\textbf{Kapitel 3} - Fische
-\begin{itemize}
- \item Agnathen (Kieferlose): erste bekannte Vertebraten und einzige ohne Kiefer. Einzige rezente Arten: Neunauge und Schleimaal (S.\ 41/42)
- \item Kiefertragende Fische: 1.\ Kiemenbogen entwickelte sich zu Kiefer, haben paarige Flossen (S.\ 45/46)
- \begin{itemize}
-  \item Knorpelfische: Haie, Rochen, Chimären; verkalkte Knorpel aber wenige/keine Knochen (S.\ 47) (Unterschied Knochen/Knorpel ignorieren oder nur Knochenfischskelette generieren?)
-  \item Knochenfische: Strahlenflosser (Flossen mit knöchernen Strahlen), Fleischflosser (Flossen mit fleischigen Stielen) (S.\ 52/53)
- \end{itemize}
-\end{itemize}
-
-\textbf{Kapitel 4} - Tetrapoden
-\begin{itemize}
- \item an Land ist Stromlinienform und sind Flossen kein Vorteil mehr, ein Hals ist nützlich und der Körper muss von Beinen getragen werden $\rightarrow$ Extremitätengürtel fester mit Axialskelett verbunden (S.\ 59)
- \item Amphibien: nicht vollkommen terrestrisch (Haut feucht, Eier im Wasser / feucht). Unterklasse Lissamphibia (dazu gehören alle rezenten Amphibien) haben nur vier Zehen am Vorderfuß. Es gibt drei Ordnungen: Anura (Schwanzlose), Urodela (Schwanzlurche) und Apoda (Beinlose) (S.\ 61)
- \item Reptilien: erste Klasse mit allen Strukturen für vollkommen landgebundenes Leben, leben aber auch teilweise wieder im Wasser (S.\ 62)
- \item Vögel: alle rezenten Vögel fliegen oder sind Nachkommen von Fliegern. Erste Zehe ist opponiert (siehe Diagramm S.\ 71). (S.\ 67)
- \item Säugetiere (S.\ 71 f)
-\end{itemize}
-
-\textbf{Kapitel 8} - (Kopfskelett)
-\begin{itemize}
- \item "`Das innere, gelenkige Skelettsystem der Vertebraten ist einzigartig im Tierreich. Es ist das wichtigste aller Organsysteme für das Studium der Wirbeltiermorphologie."' (S.\ 131)
- \item Muskeln haben Ansatzstellen an Knochen, die Lage und Ausmaße zeigen. (S.\ 131)
-\end{itemize}
-
-\textbf{Kapitel 9} - Körperskelett
-\begin{itemize}
- \item "`Die Wirbelsäule ist älter als jeder andere Teil des postcranialen Skeletts mit Ausnahme der Chorda dorsalis. Dennoch ist sie nicht so alt wie die Hauptmerkmale der weichen Organsysteme, und sie fehlt praktisch bei den ältesten, bekannten Vertebraten."' (S.\ 163)
- \item Wirbel können viele verschiedene Merkmale haben, \zb Dornfortsatz, Ansatz der Rippe (siehe Bild S.\ 165) (S.\ 163)
- \item Evolution der Wirbelsäule: zunächst Chorda dorsalis mit stützenden Knorpeln (S.\ 166)
- \item Rippen
- \begin{itemize}
-  \item ursprünglich über die gesamte Länge der Wirbelsäule vorhanden. Zwei Arten: Dorsalrippen und Ventralrippen (siehe Abb.\ S.\ 173) (S.\ 172)
-  \item keine Rippen bei kieferlosen Vertebraten und Placodermi
- \end{itemize}
- \item Mediane Flossen (175 f)
- \begin{itemize}
-  \item Dorsalflosse, Analflosse und Schwanzflosse
-  \item treten bei fast allen Agnatha und kiefertragenden Fischen auf
-  \item Wirbelsäule kann unterschiedlich in Schwanzflosse liegen (gerade, nach oben/unten geknickt oder sie hört davor auf), meistens nach oben abgeknickt (heterocerk).
- \end{itemize}
- \item Schultergürtel der Fische ist mit Kopf verbunden (S.\ 178) (also kein Hals)
- \item Beckengürtel der Tetrapoden viel größer als bei Fischen. Bei verschiednene Gruppen unterschiedlich aber speziell (\zb Vogel, Säugetier,\dots) (S.\ 180 f) $\rightarrow$ diskret repräsentieren?
- \item S.\ 183 Abbildung zur Evolution der Vordergliedmaßen
- \item Amphibien haben meistens kurze Gliedmaßen, die seitlich des Körpers nach außen gestellt sind (S.\ 187)
- \item Gliedmaßen der Reptilien oft seitlich aber manche auch unter dem Körper (wie bei Säugetieren) (S.\ 188 f)
-\end{itemize}
-
-\textbf{Kapitel 21} - Strukturelemente des Körpers
-\begin{itemize}
- \item "`allgemein nützliche"' Strukturen: Kiefer, zwei Paare von Extremitäten (S.\ 433)
- \item Skelett kann nicht einfach "`groß skaliert"' werden. Belastung ist sonst möglicherweise zu groß (S.\ 444, siehe auch S.\ 478 und S.\ 481)
- \item Knochen halten am besten Druckkraft aus $\rightarrow$ Minimierung anderer Kräfte (S.\ 444)(schlecht bei Zug oder seitlicher Belastung)
-\end{itemize}
-
-\textbf{Kapitel 22} - Mechanik von Stützung und Bewegung\\
-\begin{itemize}
- \item Balance und Gegenmoment (S.\ 466)
-\end{itemize}
-
-
-%--------------
-\chapter{D'Arcy Thompson}
-\label{appendix_darcy_thompson}
-
-(siehe auch \url{https://en.wikipedia.org/wiki/On_Growth_and_Form})
-
-Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArcy_Thompson}:\\
-
-\textbf{Kapitel 2} - Über die Größe
-\begin{itemize}
- \item Maximale und minimale Größe eines Tieres sind durch unterschiedliche Faktoren, wie \zb das Atmungssystem festgelegt. Bei Säugetieren: min.\ 5g (Maus)  (S.\ 68) und max.\ sowas wie Elefant
-\end{itemize}
-
-\textbf{Kapitel 4} - Über die Theorie der Transformationen oder den Vergleich verwandter Formen
-\begin{itemize}
- \item "`Es handelt sich hier um das berühmteste Kapitel des Buches, das in der biologischen Literatur schon vielfach besprochen worden ist."' (S.\ 325, Kommentar des Herausgebers (?))
- \item Kartesische Transormationen (S.\ 334 ff)
- \begin{enumerate}
-  \item entlang einer Achse ausdehnen
-  \item logarithmische Verlängerung
-  \item einfache Scherung
-  \item radiale Koordinaten
- \end{enumerate}
- \item Beispiele \zb S.\ 366 f, Säugetierschädel ab S.\ 371
-\end{itemize}
-
-
 %-------------------------------
-\chapter{Erhobene Daten für PCA}
+%-------------------------------
+\chapter{PCA Daten}
 \label{appendix_pca}
+
+%-----------------------------
+\section{Eingabedaten für PCA}
+
+%- - - - - - - - - 
+\subsection{Bilder}
  
+ Alle Bilder, die als Eingabe für die PCA verwendet wurden, sind in Abbildung \ref{all_images} zu finden. Im Folgenden sind die Bildquellen aufgezählt.
+ Alle Tiere, die nicht aufgezählt sind, sind aus \cite{Spezielle_Zoologie} entnommen.
+ \begin{itemize}
+  \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
+  \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
+  \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
+  \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
+  \item Giraffe\\ \url{https://de.wikipedia.org/wiki/Giraffen#/media/Datei:Giraffe_skeleton.jpg}
+  \item Gnu \url{https://lutzmoeller.net/Afrika/2007/Lutz-Juli/8-Gnu.php}
+  \item Känguru \url{http://www.bildwoerterbuch.com/tierreich/beuteltiere/kaenguru/skelett-eines-kaengurus.php}
+  \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
+  \item Pferd \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
+  \item Schlange: zu Schlangen gibt es keine Bilder, die deren Skelett in ausgestrecktem Zustand von der Seite darstellen. Deshalb wurde ein leeres Bild genommen und der Verlauf des Rückens durch eine Gerade angenähert (Extremitäten besitzt eine Schlange nicht. Außerdem ist nicht erkennbar ob \bzw wo Hals in Rücken und Rücken in Schwanz übergeht. Deshalb wurde die komplette Wirbelsäule als Rücken markiert.)
+  \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
+  \item Seekuh aus \cite{Zoologie25Wehner}
+  \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
+  \item Strauß \url{https://www.alamy.de/stockfoto-skelett-von-strauss-24658845.html}
+  \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
+ \end{itemize}
+ 
+\begin{figure}
+\subfloat[Afrikanischer Elefant]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Afrikanischer_Elefant.jpg}}~
+\subfloat[Amerikanischer Flussbarsch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Amerikanischer_Flussbarsch.jpg}}~
+\subfloat[Archaeopteryx]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Archaeopteryx.jpg}}~
+\subfloat[Blauwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Blauwal.jpg}}~
+\subfloat[Brachiosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Brachiosaurus.jpg}}
+\\
+\subfloat[Chamaeleon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Chamaeleon.jpg}}~
+\subfloat[Dimetrodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Dimetrodon.jpg}}~
+\subfloat[Dromedar]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Dromedar.jpg}}~
+\subfloat[Elster]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Elster.jpg}}~
+\subfloat[Forelle]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Forelle.jpg}}
+\\
+\subfloat[Frosch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Frosch.jpg}}~
+\subfloat[Gaemse]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Gaemse.jpg}}~
+\subfloat[Giraffe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Giraffe.jpg}}~
+\subfloat[Gnu]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Gnu.jpg}}~
+\subfloat[Groenlandwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Groenlandwal.jpg}}
+\\
+\subfloat[Ichthyornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ichthyornis.jpg}}~
+\subfloat[Ichthyosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ichthyosaurus.jpg}}~
+\subfloat[Ichthyostega]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ichthyostega.jpg}}~
+\subfloat[Kaenguru]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Kaenguru.jpg}}~
+\subfloat[Kaffernbueffel]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Kaffernbueffel.jpg}}
+\\
+\subfloat[Kaninchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Kaninchen.jpg}}~
+\subfloat[Klippschliefer]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Klippschliefer.jpg}}~
+\subfloat[Koboldmaki]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Koboldmaki.jpg}}~
+\subfloat[Krokodil]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Krokodil.jpg}}~
+\subfloat[Landschildkroete]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Landschildkroete.jpg}}
+\phantomcaption
+
+\end{figure}
+\begin{figure}
+\ContinuedFloat
+
+\subfloat[Ohrenrobbe]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Ohrenrobbe.jpg}}~
+\subfloat[Panzerspitzmaus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Panzerspitzmaus.jpg}}~
+\subfloat[Parasaurolophus walkeri]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Parasaurolophus_walkeri.jpg}}~
+\subfloat[Peloneustes philarchus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Peloneustes_philarchus.jpg}}~
+\subfloat[Pferd]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Pferd.jpg}}
+\\
+\subfloat[Pottwal]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Pottwal.jpg}}~
+\subfloat[Rothirsch]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Rothirsch.jpg}}~
+\subfloat[Schwan]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Schwan.jpg}}~
+\subfloat[Schwein]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Schwein.jpg}}~
+\subfloat[Seehund]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Seehund.jpg}}
+\\
+\subfloat[Sinornis]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Sinornis.jpg}}~
+\subfloat[Stegosaurus]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Stegosaurus.jpg}}~
+\subfloat[Strauss]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Strauss.jpg}}~
+\subfloat[Taube]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Taube.jpg}}~
+\subfloat[Thrinaxodon]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Thrinaxodon.jpg}}
+\\
+\subfloat[Triceratops]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Triceratops.jpg}}~
+\subfloat[Tyrannosaurus Rex]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Tyrannosaurus_Rex.jpg}}~
+\subfloat[Urpferdchen]{\includegraphics[width=0.2\textwidth]{../PCA/Skelettbilder/Urpferdchen.jpg}}
+
+
+\caption{Alle Bilder, die als Eingabe für die PCA verwendet wurden.}
+\label{all_images}
+\end{figure}
+
+
+ 
+ \subsection{Gewichte}
+ \label{appendix_pca_weight}
+ 
+ \begin{itemize}
+  \item Afrikanischer Elefant 4000kg, \url{https://de.upali.ch/gewicht-und-grosse/}
+  \item Afrikanischer Strauß bis 135kg, \url{https://de.wikipedia.org/wiki/Afrikanischer_Strau\%C3\%9F}
+  \item Amerikanischer Flussbarsch 2kg, \url{http://tierdoku.com/index.php?title=Amerikanischer_Flussbarsch}
+  \item Archaeopteryx 1kg, \url{https://de.wikipedia.org/wiki/Archaeopteryx}
+  \item Blauwal 120 Tonnen, \url{http://tierdoku.com/index.php?title=Blauwal}, "`das schwerste bekannte Tier der Erdgeschichte"' \url{https://de.wikipedia.org/wiki/Blauwal}
+  \item Brachiosaurus 23-44 Tonnen, \url{https://de.wikipedia.org/wiki/Brachiosaurus}
+  \item Chamäleon 0,1-2kg, \url{https://www.tierchenwelt.de/echsen/128-chamaeleon.html}
+  \item Dimetrodon 250kg, \url{https://de.wikipedia.org/wiki/Dimetrodon}
+  \item Dromedar 300-700kg, \url{https://de.wikipedia.org/wiki/Dromedar}
+  \item Durschnittsgewicht (Warmblut-)Pferd 600 kg, \url{https://www.reitarena.com/de/blog/blog-post/2015/03/03/das-pferd-grundlegende-fakten.html}
+  \item Elster 0,2kg, \url{https://de.wikipedia.org/wiki/Elster}
+  \item Forelle 10-50kg (je nach Art), \url{https://de.wikipedia.org/wiki/Forelle}
+  \item Frosch 10g, \url{http://www.biologie-schule.de/frosch-steckbrief.php}
+  \item Gämse 25-50kg, \url{https://de.wikipedia.org/wiki/G\%C3\%A4mse}
+  \item Girafffe bis 2 Tonnen, \url{https://www.tierchenwelt.de/huftiere/73-giraffe.html}
+  \item Gnu 140-250kg, \url{https://de.wikipedia.org/wiki/Gnus}
+  \item Grönlandwal 50-100 Tonnen, \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
+  \item Ichthyornis 0.3kg, \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
+  \item Ichthyosaurus 90kg, \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
+  \item Ichthyostega 80kg, \url{https://dinosaurierwelt.com/ichthyostega/}
+  \item Kaffernbüffel 350-900kg, \url{https://de.wikipedia.org/wiki/Kaffernb\%C3\%BCffel}
+  \item Känguru 2-90kg ,\url{https://de.wikipedia.org/wiki/K\%C3\%A4ngurus}
+  \item Kaninchen je nach Art, ganz grob 1kg
+  \item Klippschliefer 2-5kg, \url{https://de.wikipedia.org/wiki/Klippschliefer}
+  \item Koboldmaki 0,1kg, \url{https://de.wikipedia.org/wiki/Koboldmakis}
+  \item Krokodil 100-1000kg, \url{https://de.wikipedia.org/wiki/Krokodile}
+  \item Landschildkröte je nach Art, grob 50kg
+  \item Ohrenrobbe 25-500kg, \url{https://de.wikipedia.org/wiki/Ohrenrobben}
+  \item Panzerspitzmaus 100g ,\url{https://de.wikipedia.org/wiki/Panzerspitzmaus}
+  \item Parasaurolophus walkeri 4-5 Tonnen, \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
+  \item Peloneustes philarchus 100kg, \url{https://de.wikipedia.org/wiki/Peloneustes}
+  \item Pottwal bis 50 Tonnen, \url{https://de.wikipedia.org/wiki/Pottwal}
+  \item Rothirsch 80-350kg, \url{https://de.wikipedia.org/wiki/Rothirsch}
+  \item Schlange bis 100kg bei Riesenschlangen, \url{https://de.wikipedia.org/wiki/Schlangen}
+  \item Schwan 14kg, \url{https://de.wikipedia.org/wiki/Schw\%C3\%A4ne}
+  \item Schwein 100kg, \url{https://de.wikipedia.org/wiki/Hausschwein}
+  \item Seehund 100-150kg, \url{https://de.wikipedia.org/wiki/Seehund}
+  \item Sinornis 20g, \url{http://dinodata.de/animals/birds/pages_s/sinornis.php}
+  \item Stegosaurus 4,5 Tonnen, \url{https://de.wikipedia.org/wiki/Stegosaurus}
+  \item Taube je nach Art, grob 1-2kg
+  \item Thrinaxodon Reptil "`ein paar Pfund"', \url{https://www.thoughtco.com/thrinaxodon-1091887}
+  \item Triceratops 6-12 Tonnen, \url{https://de.wikipedia.org/wiki/Triceratops}
+  \item Tyrannosaurus 9 Tonnen, \url{https://de.wikipedia.org/wiki/Tyrannosaurus}
+  \item Urpferdchen (Propalaeotherium) 30kg, \url{https://de.wikipedia.org/wiki/Propalaeotherium}
+ \end{itemize}
+ 
+
+% --------------
+% Erhobene Werte
+% --------------
+
   \begin{figure}
    \subfloat[Erster Punkt des Halses]{\includegraphics[width=0.3\textwidth]{../PCA/gnuplot/results_with_leg_tag/input_neck1.pdf}}
    \qquad
@@ -231,9 +263,9 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
   \end{figure}
   
   
- %-------------------------------------
- \section{Mit PCA erzeugte Datenpunkte}
- 
+% ----------------------------
+% Mit PCA erzeugte Datenpunkte
+% ----------------------------
  
  \begin{figure}
    \centering
@@ -268,84 +300,3 @@ Notizen aus "`Über Wachstum und Form"' von D'Arcy Wentworth Thompson \cite{DArc
    \caption{Datenpunkte im PCA-Koordinatensystem. Eine Koordinate nimmt den Wert der positiven (+) \bzw negativen (-) Standardabweichung in die entsprechende Richtung an, alle anderen sind null. Von oben nach unten sind die Erbenisse für den größten (1) bis zum sechstgrößten (6) Eigenwert dargestellt. \emph{Beine} steht für \emph{Beine mit Bodenkontakt}.}
    \label{pca_results_sqrtEV}
   \end{figure}
- 
- 
- 
- %----------------------
- \section{Skelettbilder}
- \label{appendix_pca_skeletons}
- 
- \todo{alphabetisch sortieren}
- 
- alle Bilder aus \cite{Spezielle_Zoologie} außer:
- \begin{itemize}
-  \item Sinornis und Taube aus \cite{Vergleichende_Anatomie}
-  \item Seekuh aus \cite{Zoologie25Wehner}
-  \item Archaeopteryx, Eusthenopteron, Ichthyosaurus, Ichthyostega, Muraenosaurus, Urpferdchen aus \cite{Zoologie24Wehner}
-  \item Pferd: \url{https://www.kosmos.de/content/buecher/ratgeber/pferde-reiten/vorwaerts-abwaerts-eine-frage-der-haltung/}
-  \item Känguru \url{http://www.bildwoerterbuch.com/tierreich/beuteltiere/kaenguru/skelett-eines-kaengurus.php}
-  \item Schwan \url{https://www.alamy.de/skelett-eines-schwans-osteographia-oder-die-anatomie-der-knochen-london-1733-quelle-47-ich-12-kapitel-v-saitenhalter-autor-cheselden-william-image226921369.html}
-  \item Chamäleon \url{https://www.madcham.de/de/anatomie/}
-  \item Gnu \url{https://lutzmoeller.net/Afrika/2007/Lutz-Juli/8-Gnu.php}
-  \item Tyrannosaurus Rex \url{https://upload.wikimedia.org/wikipedia/commons/9/9f/Tyrannosaurus_skeleton.jpg}
-  \item Dormedar \url{https://upload.wikimedia.org/wikipedia/commons/a/ac/Camel_Skeleton_-_Richard_Owen_-_On_the_Anatomy_of_Vertebrates_\%281866\%29.jpg}
-  \item Strauß \url{https://www.alamy.de/stockfoto-skelett-von-strauss-24658845.html}
-  \item Blauwal \url{https://www.quagga-illustrations.de/wp-content/uploads/2014/05/h0001705.jpg}
-  \item Krokodil \url{https://de.depositphotos.com/210906852/stock-illustration-skeleton-crocodile-vintage-line-drawing.html}
-  \item Giraffe \url{https://de.wikipedia.org/wiki/Giraffen#/media/Datei:Giraffe_skeleton.jpg}
-  \item Schlange: zu Schlangen gibt es keine Bilder, die deren Skelett in ausgestrecktem Zustand von der Seite darstellen. Deshalb wurde ein leeres Bild genommen und der Verlauf des Rückens durch eine Gerade angenähert (Extremitäten besitzt eine Schlange nicht. Außerdem ist nicht erkennbar ob \bzw wo Hals in Rücken und Rücken in Schwanz übergeht. Deshalb wurde die komplette Wirbelsäule als Rücken markiert.)
- \end{itemize}
-
- 
- \section{Gewicht der Tiere}
- \label{appendix_pca_weight}
- 
- \todo{alphabetisch sortieren}
- 
- \begin{itemize}
-  \item Blauwal 120 Tonnen, \url{http://tierdoku.com/index.php?title=Blauwal}, "`das schwerste bekannte Tier der Erdgeschichte"' \url{https://de.wikipedia.org/wiki/Blauwal}
-  \item Durschnittsgewicht (Warmblut-)Pferd 600 kg, \url{https://www.reitarena.com/de/blog/blog-post/2015/03/03/das-pferd-grundlegende-fakten.html}
-  \item Afrikanischer Elefant 4000kg, \url{https://de.upali.ch/gewicht-und-grosse/}
-  \item Amerikanischer Flussbarsch 2kg, \url{http://tierdoku.com/index.php?title=Amerikanischer_Flussbarsch}
-  \item Archaeopteryx 1kg, \url{https://de.wikipedia.org/wiki/Archaeopteryx}
-  \item Brachiosaurus 23-44 Tonnen, \url{https://de.wikipedia.org/wiki/Brachiosaurus}
-  \item Dimetrodon 250kg, \url{https://de.wikipedia.org/wiki/Dimetrodon}
-  \item Elster 0,2kg, \url{https://de.wikipedia.org/wiki/Elster}
-  \item Forelle 10-50kg (je nach Art), \url{https://de.wikipedia.org/wiki/Forelle}
-  \item Grönlandwal 50-100 Tonnen, \url{https://de.wikipedia.org/wiki/Gr\%C3\%B6nlandwal}
-  \item Ichthyornis 0.3kg, \url{http://dinodata.de/animals/birds/pages_i/ichthyornis.php}
-  \item Ichthyosaurus 90kg, \url{https://www.tiere-online.de/sonstige-tiere/dinosaurier/ichthyosaurus/}
-  \item Ichthyostega 80kg, \url{https://dinosaurierwelt.com/ichthyostega/}
-  \item Kaffernbüffel 350-900kg, \url{https://de.wikipedia.org/wiki/Kaffernb\%C3\%BCffel}
-  \item Kaninchen je nach Art, ganz grob 1kg
-  \item Klippschliefer 2-5kg, \url{https://de.wikipedia.org/wiki/Klippschliefer}
-  \item Koboldmaki 0,1kg, \url{https://de.wikipedia.org/wiki/Koboldmakis}
-  \item Landschildkröte je nach Art, grob 50kg
-  \item Ohrenrobbe 25-500kg, \url{https://de.wikipedia.org/wiki/Ohrenrobben}
-  \item Panzerspitzmaus 100g ,\url{https://de.wikipedia.org/wiki/Panzerspitzmaus}
-  \item Parasaurolophus walkeri 4-5 Tonnen, \url{http://tierdoku.com/index.php?title=Parasaurolophus_walkeri}
-  \item Peloneustes philarchus 100kg, \url{https://de.wikipedia.org/wiki/Peloneustes}
-  \item Pottwal bis 50 Tonnen, \url{https://de.wikipedia.org/wiki/Pottwal}
-  \item Rothirsch 80-350kg, \url{https://de.wikipedia.org/wiki/Rothirsch}
-  \item Seehund 100-150kg, \url{https://de.wikipedia.org/wiki/Seehund}
-  \item Sinornis 20g, \url{http://dinodata.de/animals/birds/pages_s/sinornis.php}
-  \item Stegosaurus 4,5 Tonnen, \url{https://de.wikipedia.org/wiki/Stegosaurus}
-  \item Taube je nach Art, grob 1-2kg
-  \item Thrinaxodon Reptil "`ein paar Pfund"', \url{https://www.thoughtco.com/thrinaxodon-1091887}
-  \item Triceratops 6-12 Tonnen, \url{https://de.wikipedia.org/wiki/Triceratops}
-  \item Urpferdchen (Propalaeotherium) 30kg, \url{https://de.wikipedia.org/wiki/Propalaeotherium}
-  \item Schwan 14kg, \url{https://de.wikipedia.org/wiki/Schw\%C3\%A4ne}
-  \item Chamäleon 0,1-2kg, \url{https://www.tierchenwelt.de/echsen/128-chamaeleon.html}
-  \item Gämse 25-50kg, \url{https://de.wikipedia.org/wiki/G\%C3\%A4mse}
-  \item Gnu 140-250kg, \url{https://de.wikipedia.org/wiki/Gnus}
-  \item Schwein 100kg, \url{https://de.wikipedia.org/wiki/Hausschwein}
-  \item Känguru 2-90kg ,\url{https://de.wikipedia.org/wiki/K\%C3\%A4ngurus}
-  \item Tyrannosaurus 9 Tonnen, \url{https://de.wikipedia.org/wiki/Tyrannosaurus}
-  \item Dromedar 300-700kg, \url{https://de.wikipedia.org/wiki/Dromedar}
-  \item Afrikanischer Strauß bis 135kg, \url{https://de.wikipedia.org/wiki/Afrikanischer_Strau\%C3\%9F}
-  \item Frosch 10g, \url{http://www.biologie-schule.de/frosch-steckbrief.php}
-  \item Krokodil 100-1000kg, \url{https://de.wikipedia.org/wiki/Krokodile}
-  \item Schlange bis 100kg bei Riesenschlangen, \url{https://de.wikipedia.org/wiki/Schlangen}
-  \item Girafffe bis 2 Tonnen, \url{https://www.tierchenwelt.de/huftiere/73-giraffe.html}
- \end{itemize}
- 
